--- a/src/styles/components/services/imageSliderMobile.module.scss
+++ b/src/styles/components/services/imageSliderMobile.module.scss
@@ -3,7 +3,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 48px;
+    gap: 16px;
     background-color: var(--color-white);
 }
 
@@ -114,10 +114,21 @@
 
 .info {
     display: flex;
-    flex-direction: column;
-    align-items: center;
+    justify-content: center;
+    padding: 24px 0px;
+    
     color: var(--color-gold);
     background-color: var(--color-maroon);
 
     width: 100%;
+}
+
+.info_items {
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+}
+
+.info_item {
+    font-size: 1.5rem;
 }
